force-app/main/default/objects/PMPosition__c/PMPosition__c.object-meta.xml
<CustomObject>
    <description>贵金属仓位</description>
    <label>PMPostion</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{000}</displayFormat>
        <label>PMPostion NO.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMPostion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>