force-app/main/default/objects/PMPosition__c/fields/AveragePositionPriceBG__c.field-meta.xml
<CustomField>
    <fullName>AveragePositionPriceBG__c</fullName>
    <description>持仓价格-先买入金</description>
    <label>Average Position Price(Buy Gold)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>