force-app/main/default/objects/PMPosition__c/fields/AveragePositionPriceBS__c.field-meta.xml
<CustomField>
    <fullName>AveragePositionPriceBS__c</fullName>
    <description>持仓价格-先买入银</description>
    <label>Average Position Price(Buy Silver)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>