force-app/main/default/objects/PMPosition__c/fields/AveragePositionPriceSS__c.field-meta.xml
<CustomField>
    <fullName>AveragePositionPriceSS__c</fullName>
    <description>持仓价格-先卖出银</description>
    <label>Average Position Price(Sell Silver)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>