force-app/main/default/objects/PMPosition__c/fields/BuyGoldFirstGram__c.field-meta.xml
<CustomField>
    <fullName>BuyGoldFirstGram__c</fullName>
    <label>BuyGoldFirstGram</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>