force-app/main/default/objects/PMPosition__c/fields/BuySilverFirstGram__c.field-meta.xml
<CustomField>
    <fullName>BuySilverFirstGram__c</fullName>
    <label>BuySilverFirstGram</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>