force-app/main/default/objects/PMPosition__c/fields/ClosePrice__c.field-meta.xml
<CustomField>
    <fullName>ClosePrice__c</fullName>
    <description>平仓价格</description>
    <label>Close Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>