force-app/main/default/objects/PMPosition__c/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <description>利息</description>
    <label>Interest</label>
    <type>Date</type>
</CustomField>