force-app/main/default/objects/PMPosition__c/fields/OpenPrice__c.field-meta.xml
<CustomField>
    <fullName>OpenPrice__c</fullName>
    <description>开仓价格</description>
    <label>Open Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>