force-app/main/default/objects/PMPosition__c/fields/SellGoldFirstGram__c.field-meta.xml
<CustomField>
    <fullName>SellGoldFirstGram__c</fullName>
    <label>SellGoldFirstGram</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>