force-app/main/default/objects/PMPosition__c/fields/SellSilverFirstGram__c.field-meta.xml
<CustomField>
    <fullName>SellSilverFirstGram__c</fullName>
    <label>SellSilverFirstGram</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>