force-app/main/default/objects/PMPosition__c/recordTypes/BuySilverFirst.recordType-meta.xml
<RecordType>
    <fullName>BuySilverFirst</fullName>
    <active>true</active>
    <description>先买入后卖出-银</description>
    <label>BuySilverFirst</label>
</RecordType>