force-app/main/default/objects/PMPosition__c/recordTypes/SellSilverFirst.recordType-meta.xml
<RecordType>
    <fullName>SellSilverFirst</fullName>
    <active>true</active>
    <description>先卖出后买入-银</description>
    <label>SellSilverFirst</label>
</RecordType>